Added more information to the home info

--- a/css/home.css
+++ b/css/home.css
@@ -5,13 +5,13 @@
     top: 0;
     right: 0;
     color:black;
-    background-color: #fff;
     overflow-x: hidden;
 }
 
 .homeinfo {
         width: 70%;
-        text-align: center;
+        padding-top: 10px;
+        text-align: center
 }
 
 button {
